# project-lance

./: .pylintrc  .style.yapf  README.md  pyproject.toml  requirements.txt
basic_neat_model/: README.md  config  parallel_model.py  parallel_utils.py  winner.p
basic_neat_model/agents/: neat_agent.py
basic_neat_model/checkpoints/: neat-checkpoint-299
simulator/: battle_log.py  modifiable_stat.py  ruleset.py  status.py  type.py
simulator/agents/: agent.py  basic_nn_agent.py  nn_agent.py  random_agent.py
simulator/battle/: action.py  active_pokemon.py  battle.py  battling_pokemon.py  player_agent.py
simulator/dex/: movedex.json  movedex.py  pokedex.json  pokedex.py
simulator/moves/: damaging_move.py  debuffing_damaging_move.py  double_hit_move.py  flinching_damaging_move.py  high_critical_chance_damaging_move.py  misc_moves.py  move.py  multi_hit_move.py  repeating_move.py  side_effect_damaging_move.py  stat_lowering_move.py  stat_modifying_move.py  stat_raising_move.py  status_damaging_move.py  status_effect_move.py
simulator/pokemon/: party_pokemon.py  pokemon_species.py
simulator/team_generators/: basic_rival_team_generator.py  team_generator.py
