[tool.poetry]
name = "project-lance"
version = "0.1.0"
description = ""
authors = ["Alex Steele <45648397+ADSteele916@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "project_lance"}]

[tool.poetry.dependencies]
python = "^3.8"
neat-python = "^0.92"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.2"
yapf = "^0.32.0"
isort = "^5.10.1"
pytest = "^7.1.3"
toml = "^0.10.2"
mypy = "^0.971"

[tool.isort]
profile = "google"
src_paths = ["simulator", "basic_neat_model"]

[tool.yapf]
based_on_style = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
