[tool.poetry]
name = "project-lance"
version = "0.1.0"
description = ""
authors = ["Alex Steele <45648397+ADSteele916@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "project_lance"}]

[tool.poetry.dependencies]
python = "^3.8"
neat-python = "^0.92"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.2"
black = {extras = ["d"], version = "^22.10.0"}
isort = "^5.10.1"
pytest = "^7.1.3"
mypy = "^0.971"

[tool.isort]
profile = "black"
src_paths = ["simulator", "basic_neat_model"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
